# CodeCrack

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  core-design-brief.md
engine/: pyproject.toml
engine/codecrack/: __init__.py  __main__.py  cli.py  pipeline.py
engine/codecrack/analysis/: __init__.py  analyzer.py
engine/codecrack/core/: __init__.py  models.py
engine/codecrack/execution/: __init__.py  runner.py
engine/codecrack/generation/: __init__.py  generator.py
engine/codecrack/report/: __init__.py  render.py
engine/tests/: conftest.py  test_detectors.py  test_executor.py  test_pipeline.py
engine/tests/fixtures/: bare_except.py  broad_except.py  index_error.py  mutable_default.py  none_deref.py  syntax_error.py  zero_division.py
macapp/: .gitignore  PPIDE.entitlements  Package.resolved  Package.swift  make-app.sh
macapp/Sources/PPIDE/: ContentView.swift  FileTree.swift  PPIDEApp.swift
macapp/Sources/PPIDE/Editor/: Analyzer.swift  CodeEditor.swift  ConsolePanel.swift  FilePicker.swift  Finding.swift  IssuesPanel.swift  LanguageMap.swift  LineNumberRulerView.swift  OpenDocument.swift  ProjectSearch.swift  Runner.swift  SplitDividerHider.swift  SyntaxHighlighter.swift  TabBar.swift  Theme.swift
macapp/Sources/PPIDE/Session/: RecentFiles.swift  SessionRestore.swift
macapp/Sources/PPIDE/Settings/: SettingsKeys.swift  SettingsView.swift
scripts/: fetch-python-runtime.sh
